--- a/button.css
+++ b/button.css
@@ -7,6 +7,8 @@ body {
     width: 300px;
     font-family: 'DotGothic';
     color: #090e30;
+    text-align: center;
+    font-size: 14px;
 }
 
 h1 {
@@ -18,6 +20,7 @@ h1 {
 #counterBar {
   text-align: center;
   font-size: 16px;
+  margin-top:10px;
 }
 
 button {
